--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	  <h1>予約特典</h1>
 		<section>
 		<h3 class="h3">①吸血鬼に捧げるための赤ワイン（グラス）と赤いバラ一輪を席にご用意</h3>
-			<img src="images/wine2.png" width="25%" alt="wine" class="wine">
+			<img src="images/wine2.jpg" width="25%" alt="wine" class="wine">
 		<p>バラは血の代用品。<br>
 			吸血鬼に与えると、赤い飲み物でも十字架でも見られない特殊な反応が見られます。</p>
 		</section>
