--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!doctype html>
-<html lang="ja">
+<html lang="ja" class="notranslate" translate="no">
 <head>
 <meta charset="utf-8">
+<meta name="google" content="notranslate" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Koniec noci / 吸血鬼の本格Bar LP</title>
-<link rel="stylesheet"  media="(min-width: 768px)" href="css/lp.css">
-<link rel="stylesheet" media="(max-width: 768px)" type="text/css" href="css/lp_sp.css">
+<link rel="stylesheet"  media="(min-width: 768px)" href="lp.css">
+<link rel="stylesheet" media="(max-width: 768px)" type="text/css" href="lp_sp.css">
 </head>
 	
 <body>
 <!--メイン画像-->
-<div class="mainImage"><img src="images/bar-a.png" alt="welcome to bar" width="200%" height="513"></div>
+<div class="mainImage"><img src="bar-a.png" alt="welcome to bar" width="200%" height="513"></div>
 	
 <!--コンセプト-->
 <div class="consept">
-<img src="images/text-concept.png" width="99%" alt="concept" >	
+<img src="text-concept.png" width="99%" alt="concept" >	
 </div>
 <!--カクテルアピール-->
 <div class="appeal">
   <section class="appeal_1">
   <h1>Cocktail</h1>
-	<p><img src="images/drink2.jpeg" width="40%" alt="カクテル">
+	<p><img src="drink2.jpeg" width="40%" alt="カクテル">
 	   吸血鬼は元々、血を得るために人間をもてなすことが得意です。<br>
 	   カクテルは定番の100種に加えて毎月限定メニューも用意しており、各種お酒や、美味しい食事、モクテルやノンアルコールも
        豊富に取り揃えております。<br>
@@ -29,7 +30,7 @@
 </div>
 <!--店ルール-->
 <div class="event">
-<img src="images/event2.png" width="98%" alt="event" >	
+<img src="event2.png" width="98%" alt="event" >	
 </div>	
 	
 <!--個室アピール-->
@@ -47,13 +48,13 @@
 	  <h1>予約特典</h1>
 		<section>
 		<h3 class="h3">①吸血鬼に捧げるための赤ワイン（グラス）と赤いバラ一輪を席にご用意</h3>
-			<img src="images/wine2.jpg" width="25%" alt="wine" class="wine">
+			<img src="wine2.jpg" width="25%" alt="wine" class="wine">
 		<p>バラは血の代用品。<br>
 			吸血鬼に与えると、赤い飲み物でも十字架でも見られない特殊な反応が見られます。</p>
 		</section>
 		<section>
 　　	   <h3 class="h3">②ミニケーキ（お一人様につき一個）　or　トークタイム一回分無料</h3>
-		 <img src="images/cake2.jpeg" width="25%" alt="wine" class="cake">
+		 <img src="cake2.jpeg" width="25%" alt="wine" class="cake">
 		<p>ミニケーキは記念デザートプレート（一席につき一皿）に変更も可能です。<br>
 			 記念デザートプレートをご希望の際は、事前にお申し付けください。</p>
 		</section>
@@ -61,7 +62,7 @@
 </div>
 <!--予約ボタン-->
 <section>
-	<div id="button"><a href="#"><img src="images/stompfin.png" width="20%" height="20%" alt="予約ボタン"></a></div>	
+	<div id="button"><a href="#"><img src="stompfin.png" width="20%" height="20%" alt="予約ボタン"></a></div>	
 </section>
 <!--店舗情報-->
 <footer>
