--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 <body>
 <!--メイン画像-->
-<div class="mainImage"><img src="bar-a.png" alt="welcome to bar" width="200%" height="513"></div>
+<div class="mainImage"><img src="bar-a.jpg" alt="welcome to bar" width="200%" height="513"></div>
 	
 <!--コンセプト-->
 <div class="consept">
